@@ -74,7 +74,7 @@ define HOSTAPD_CONFIGURE_CMDS
 	$(SED) "s/^#CONFIG_DRIVER_WIRED/CONFIG_DRIVER_WIRED/" $(HOSTAPD_CONFIG)
 	$(SED) "s/^#CONFIG_DRIVER_NL80211/CONFIG_DRIVER_NL80211/" $(HOSTAPD_CONFIG)
 # Misc
- 	$(SED) "s/^CONFIG_IPV6/#CONFIG_IPV6/" $(HOSTAPD_CONFIG)
+	$(SED) "s/^CONFIG_IPV6/#CONFIG_IPV6/" $(HOSTAPD_CONFIG)
 	$(SED) "s/^#CONFIG_IEEE80211N/CONFIG_IEEE80211N/" $(HOSTAPD_CONFIG)
 	$(SED) "s/^#CONFIG_IEEE80211R/CONFIG_IEEE80211R/" $(HOSTAPD_CONFIG)
 	$(HOSTAPD_CRYPTO_CONFIG)
@@ -85,10 +85,10 @@ define HOSTAPD_CONFIGURE_CMDS
 endef
 
 define HOSTAPD_INSTALL_TARGET_CMDS
-	$(INSTALL) -m 0755 $(@D)/$(HOSTAPD_SUBDIR)/hostapd \
-		$(TARGET_DIR)/usr/sbin
-	$(INSTALL) -m 0755 $(@D)/$(HOSTAPD_SUBDIR)/hostapd_cli \
-		$(TARGET_DIR)/usr/bin
+	$(INSTALL) -m 0755 -D $(@D)/$(HOSTAPD_SUBDIR)/hostapd \
+		$(TARGET_DIR)/usr/sbin/hostapd
+	$(INSTALL) -m 0755 -D $(@D)/$(HOSTAPD_SUBDIR)/hostapd_cli \
+		$(TARGET_DIR)/usr/bin/hostapd_cli
 endef
 
 define HOSTAPD_UNINSTALL_TARGET_CMDS
